--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -25,6 +25,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="panel-middle text-center">Fórmula</div>
+                    <div class="panel-body text-responsive text-center text-only">
+                        <p>TURNOS<sub>reducidos</sub> = GREMIOS<sub>jugador</sub> * 3 / 100</p>
+                    </div>
                     <div class="panel-middle text-center">Opciones</div>
                     <div class="panel-body text-center">
                         <div class="row">
