--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -25,12 +25,8 @@
                     </div>
                 </div>
                 <div class="panel-middle text-center">Fórmula</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-12 text-center text-only">
-                            PUJA<sub>nueva</sub> &ge; PUJA<sub>actual</sub> + 10%
-                        </div>
-                    </div>
+                <div class="panel-body text-responsive text-only text-center">
+                    <p>PUJA<sub>nueva</sub> &ge; PUJA<sub>actual</sub> + 10%</p>
                 </div>
                 <div class="panel-footer text-center">
                     <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_tax' ) }}"><i class="fa fa-fw fa-money"></i>Recaudar</a>
