--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -28,7 +28,7 @@
                         <div class="panel-body text-responsive">
                             {% for god in gods %}
                             <div class="col-xs-6 text-center">
-                                <span class="label label-{{ god.faction.class }}"><i class="fa fa-fw fa-rebel"></i><a href="{{ path('archmage_game_account_profile', {'id': god.id}) }}" class="link">{{ god.nick }}</a></span>
+                                <span class="label label-{{ god.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': god.id}) }}" class="link">{{ god.nick }}</a></span>
                             </div>
                             {% endfor %}
                         </div>
