--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -46,7 +46,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ item.artifact.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ item.artifact.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ item.artifact.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
