--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -51,7 +51,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ enchantment.spell.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ enchantment.spell.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ enchantment.spell.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
