--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -53,7 +53,7 @@
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ troop.unit.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ troop.unit.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
