--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -55,7 +55,7 @@
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ unit.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ unit.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
