--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> para adquirir diversas <span class="label label-extra">Tropas</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span> que no podrías obtener de otra forma. Si te sobrepujan, se te devolverá el <span class="label label-extra">Oro</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> para adquirir diversas <span class="label label-extra">Tropas</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span> que no podrías obtener de otra forma. Si te sobrepujan, se te devolverá el <span class="label label-extra">Oro</span> menos el 5% de comisión.</div>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.contract.hero.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ auction.contract.hero.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ auction.contract.hero.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ auction.research.spell.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ auction.research.spell.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if auction.troop.unit.skill is not null %}{{ auction.troop.unit.skill.description|raw }}{% else %}Ninguna{% endif %}</div> #}
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ auction.troop.unit.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ auction.troop.unit.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.item.artifact.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ auction.item.artifact.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ auction.item.artifact.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
