--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -56,7 +56,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ research.spell.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i>"{{ research.spell.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>{{ research.spell.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
