Terminados los bonus de ataque, ya sean hechizos, heroes o artefactos. Eliminado conversionBonus en skill. Modificados playerfixtures para los dioses. Mejoradas algunas views. Falta solucionar el tema de los conjuros en la vista!

--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -27,7 +27,9 @@
                     </div>
                     <div class="panel-middle text-center">Fórmula</div>
                     <div class="panel-body text-responsive text-center text-only">
-                        <p>PROB<sub>éxito</sub> = MIN(75, 5 + FORTALEZAS<sub>jugador</sub> * 10 / 100)</p>
+                        <p>% ÉXITO<sub>ataque</sub> >= % DEFENSA<sub>física</sub></p>
+                        <p>% ÉXITO<sub>hechizo</sub> >= % DEFENSA<sub>mágica</sub></p>
+                        <p>% ÉXITO<sub>artefacto</sub> >= % DEFENSA<sub>mágica</sub></p>
                     </div>
                     <div class="panel-middle text-center">Opciones</div>
                     <div class="panel-body text-center">
