--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -26,7 +26,7 @@
                         </div>
                         <div class="panel-middle text-center">Fórmula</div>
                         <div class="panel-body text-responsive text-center text-only">
-                            <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * 60</p>
+                            <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * ORO<sub>granja</sub> * 2</p>
                         </div>
                         <div class="panel-footer text-center">
                             <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
