--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -26,7 +26,7 @@
                         </div>
                         <div class="panel-middle text-center">Fórmula</div>
                         <div class="panel-body text-responsive text-only text-center">
-                            <p>MANA<sub>cargado</sub> = NODOS<sub>jugador</sub> * 20</p>
+                            <p>MANA<sub>cargado</sub> = NODOS<sub>jugador</sub> * MANA<sub>nodo</sub> * 2</p>
                         </div>
                         <div class="panel-footer text-center">
                             <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_charge') }}" method="post">
