--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -5,8 +5,7 @@
 {% block fos_user_content %}
 <div class="container">
     <div class="jumbotron text-center">
-        <h1>&Aring;rchM&acirc;g&Euml;</h1>
-        <h3>- BETA -</h3>
+        {% include "ArchmageUserBundle::logo.html.twig" %}
         <form id="login" name="login" class="form-signin" data-toggle="validator" action="{{ path("fos_user_security_check") }}" method="post">
             <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario" value="{{ last_username }}" required />
             <input type="password" id="password" name="_password" class="form-control" placeholder="Contraseña" required />
@@ -14,7 +13,7 @@
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
         </form>
         <a href="{{ path('fos_user_registration_register') }}">Registro</a> -
-        {# <a href="{{ path('fos_user_resetting_request') }}">Password</a> - #}
+        <a href="{{ path('fos_user_resetting_request') }}">Password</a> -
         <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
         <br/>
         <br/>
