--- a/src/Archmage/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -11,7 +11,7 @@
             {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'Nueva contraseña' } }) }}
             {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'Confirmar contraseña' } }) }}
             {{ form_rest(form) }}
-            <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Cambiar</button>
+            <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Cambiar</button>
         </form>
     </div>
 </div>
