--- a/src/Archmage/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Resetting/request.html.twig
@@ -4,9 +4,9 @@
 <div class="container">
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
-        <form id="request" name="request" class="form-signin" data-toggle="validator" action="{{ path('fos_user_resetting_send_email') }}" {{ form_enctype(form) }} method="post">
-            <input type="text" id="username" name="username" required="required" />
-            <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Resetear</button>
+        <form class="form-signin" data-toggle="validator" action="{{ path('fos_user_resetting_send_email') }}" method="POST">
+            <input type="text" id="username" name="username" class="form-control" placeholder="Usuario" required />
+            <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Resetear</button>
         </form>
     </div>
 </div>
