--- a/src/Archmage/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -4,11 +4,9 @@
 <div class="container">
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
-        <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset">
-            {{ form_widget(form) }}
-            <div>
-                <input type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
-            </div>
+        <form class="form-signin" data-toggle="validator" action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST">
+            {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'E@mail.com' } }) }}
+            <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Resetear</button>
         </form>
     </div>
 </div>
