--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -12,17 +12,21 @@
         </div>
         <div class="col-xs-12"><a name="objetivo"></a>
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Introducción</div>
+                <div class="panel-heading text-center">Turnos</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En ArchMage, asumirás el rol de un mago novicio intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores por la supremacía, investigando hechizos, reclutando tropas, contratando héroes y encontrando artefactos antigüos que usar en tu beneficio. El motor del juego son los <span class="label label-extra">Turnos</span>, que se otorgan a cada jugador en un ratio de 1 cada 5 minutos. Con ellos, el jugador tiene a su disposición un amplio abanico de posibilidades, como construir edificios que mejoren su estatus y su producción de recursos de <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span>, o mejorar su ratio de <span class="label label-extra">Defensa Mágica</span> y <span class="label label-extra">Defensa Física</span>, aumentando su protección contra hechizos y ataques enemigos, </p>
+                    <p>En ArchMage, asumirás el rol de un mago o maga novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores por la supremacía en una carrera económica y militar, investigando diversos y poderosos hechizos, reclutando gran variedad de tropas en tu ejército, contratando y subiendo de nivel a héroes que ayudarán en tu campaña y encontrando misteriosos artefactos antigüos que usar en tu beneficio, o en perjuicio de otros.</p>
+                    <p>El motor del juego son los <span class="label label-extra">Turnos</span>. Todos los magos ganan 1 <span class="label label-extra">Turno</span> cada 5 minutos, y se acumulan hasta un máximo de 300. Con ellos, el jugador tiene a su disposición un amplio abanico de posibilidades, como construir edificios que mejoren su producción e investigación, su almacenamiento y su producción de recursos como <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> o <span class="label label-extra">Maná</span>, o incluso mejorar su ratio de <span class="label label-extra">Defensa Mágica</span> y <span class="label label-extra">Defensa Física</span>, aumentando su protección contra hechizos y ataques enemigos.</p>
+                    <p>Otra parte importante del juego son los edificios, sin los cuales no podrías hacer prácticamente nada. Dado que es un juego de turnos y de recursos, aprovechar al máximo los efectos de los edificios es indispensable para avanzar en el ranking más rápido que tus adversarios. Construyendo <span class="label label-extra">Granjas</span> aumentarás tu producción de <span class="label label-extra">Oro</span> al turno, con el que podrás construir más edificios, pagar mantenimientos, o adquirir nuevos objetos en la subasta. Con los <span class="label label-extra">Pueblos</span> aumentarás tus <span class="label label-extra">Personas</span>, y con los <span class="label label-extra">Nodos</span> tu <span class="label label-extra">Maná</span>. Todo es importante y solo tú decidirás a qué le das prioridad, puesto que las tierras para construir son muy limitadas, y los costes de mantenimiento de los más podersoso encantamientos, héroes y tropas, extremadamente altos de pagar.</p>
                 </div>
             </div>
         </div>
         <div class="col-xs-12"><a name="batalla"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Batalla</div>
-                <div class="panel-body text-center text-responsive text-only">
-                    <div class="row">
+                <div class="panel-body text-responsive text-only">
+                    <p>El principal atractivo del juego es el ataque entre jugadores. Esto permite rápidos y emocionantes cambios en el ranking de magos, creando oportunidades contra jugadores muy poderosos que normalmente lideran el ranking impunemente. Al atacar a otro mago, puedes seleccionar qué cantidad de tropas vas a llevar a la batalla, así como si quieres utilizar algún hechizo o artefacto diseñado para la batalla. Los héroes que tengas irán contigo a la guerra, sirvan o no para ella. Además, dado que pueden atacarte mientras no estás conectado al juego, tienes la posibilidad de escoger uno de tus hechizos y/o artefactos para que se activen automáticamente en defensa, junto con la totalidad de tus tropas y héroes.</p>
+                    <br>
+                    <div class="row text-center">
                         {# row #}
                         <div class="col-xs-12 col-md-offset-1 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
@@ -40,14 +44,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12"><a name="subasta"></a>
-            <div class="panel panel-default">
-                <div class="panel-heading text-center">Subasta</div>
-                <div class="panel-body text-responsive text-only">
-                    <p>Información acerca de la subasta.</p>
+                    <br>
+                    <p>Para poder atacar a otro mago, deberás pasar su <span class="label label-extra">Defensa Física</span>, y para lanzarle hechizos y activar artefactos, superar su <span class="label label-extra">Defensa Mágica</span>, las cuales empiezan con un 5% de base y son incrementables mediante edificios y encantamientos.</p>
+                    <p>Si ganas la batalla, normalmente debilitarás a tu contrincante lo suficiente como para reducir su ranking bastantes puestos. Si ganas de forma apastante, podrás incluso robarle edificios que se añadirán a tu reino, así como reducir niveles de héroes enemigos. No obstante, si pierdes el ataque, no ganarás absolutamente nada. La humillación será suficiente recompensa.</p>
+                    <p>Los Dioses son jugadores NPC no controlados por nadie, con una defensa altísima y unas tropas impresionantes, que normalmente nadie podrá derrotar. Pero tal vez a base de muchos ataques especiales, podáis igualar e incluso derrotar a estos gigantes de la magia, y ganar una enorme recompensa en tierras...</p>
                 </div>
             </div>
         </div>
