--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -22,10 +22,10 @@
                 <tbody>
                     {% for player in players %}
                     <tr>
-                        <td class="text-right">{{ loop.index|nf }}</td>
+                        <td class="text-right">{{ loop.index|nff }}</td>
                         <td class="text-right">{{ player.power|nff }}</td>
                         <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'id': player.id } ) }}" class="link">{{ player.nick }}</a></span></td>
-                        <td class="text-right">{{ player.lands|nf }}</td>
+                        <td class="text-right">{{ player.lands|nff }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -42,6 +42,8 @@
     $(document).ready(function() {
         var oTable = $('#datatable').dataTable({
             "order": [[ 0, "asc" ]],
+            "decimal": ",",
+            "thousands": ".",
             "aoColumns": [
                 {"sType": "numeric", "bSortable": true },
                 {"sType": "numeric", "bSortable": true },
