--- a/src/Archmage/GameBundle/Resources/views/resources.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/resources.html.twig
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <div class="col-xs-12">
         <p class="resources">
             <span class="label label-extra"><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }} / 300</span>
             <span class="label label-extra"><i class="fa fa-fw fa-magic"></i>{{ player.magic|nf }}</span>
