--- a/src/Archmage/GameBundle/Resources/views/resources.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/resources.html.twig
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
         <p class="resources">
-            <span class="label label-extra"><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }} / 300</span>
-            <span class="label label-extra"><i class="fa fa-fw fa-magic"></i>{{ player.magic|nf }}</span>
-            <span class="label label-extra"><i class="fa fa-fw fa-diamond"></i>{{ player.artifacts|nf }}</span>
-            <span class="label label-extra"><i class="fa fa-fw fa-globe"></i>{{ player.free|nf }} / {{ player.lands|nf }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nff }} / 300</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-magic"></i>{{ player.magic|nff }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-diamond"></i>{{ player.artifacts|nff }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-globe"></i>{{ player.free|nff }} / {{ player.lands|nff }}</span>
             <br>
-            <span class="label label-extra"><i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}</span>
-            <span class="label label-{% if player.goldresourceperturn -  player.goldmaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.goldresourceperturn -  player.goldmaintenanceperturn)|nf }}</span>
-            <span class="label label-extra"><i class="fa fa-fw fa-users"></i>{{ player.people|nf }} / {{ player.peopleCap|nf }}</span>
-            <span class="label label-{% if player.peopleresourceperturn -  player.peoplemaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.peopleresourceperturn -  player.peoplemaintenanceperturn)|nf }}</span>
-            <span class="label label-extra"><i class="fa fa-fw fa-tint"></i>{{ player.mana|nf }} / {{ player.manaCap|nf }}</span>
-            <span class="label label-{% if player.manaresourceperturn -  player.manamaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaresourceperturn -  player.manamaintenanceperturn)|nf }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-money"></i>{{ player.gold|nff }}</span>
+            <span class="label label-{% if player.goldresourceperturn -  player.goldmaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.goldresourceperturn -  player.goldmaintenanceperturn)|nff }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-users"></i>{{ player.people|nff }} / {{ player.peopleCap|nff }}</span>
+            <span class="label label-{% if player.peopleresourceperturn -  player.peoplemaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.peopleresourceperturn -  player.peoplemaintenanceperturn)|nff }}</span>
+            <span class="label label-extra"><i class="fa fa-fw fa-tint"></i>{{ player.mana|nff }} / {{ player.manaCap|nff }}</span>
+            <span class="label label-{% if player.manaresourceperturn -  player.manamaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaresourceperturn -  player.manamaintenanceperturn)|nff }}</span>
         </p>
     </div>
 </div>
