Arreglado sistema para obtener tu numero de ranking mediante getPower usando usort. Nuevos tooltips en resources.html.twig con su trigger en base.html.twig. Cambiado foto y nombre del Vial de Veneno a Barril de Polvora.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,9 +71,11 @@
                     $('.selectpicker').selectpicker('mobile');
                 } else {
                     $('.selectpicker').selectpicker({
-
                     });
                 }
+                $(function () {
+                    $('[data-toggle="tooltip"]').tooltip()
+                })
             });
         </script>
         {% endjavascripts %}
